[gd_scene load_steps=4 format=3 uid="uid://ccx4ynw0r6lbo"]

[ext_resource type="Texture2D" uid="uid://bscjp4sffqst1" path="res://Sprites/Players/tile_0085.png" id="1_c58w5"]
[ext_resource type="Script" uid="uid://dms8pux7lk41q" path="res://Units/Unit.gd" id="1_ypl2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uu6xs"]
size = Vector2(12, 12)

[node name="Unit" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_ypl2c")

[node name="Sprite" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -4)
texture = ExtResource("1_c58w5")

[node name="LeftHandSprite" type="Sprite2D" parent="Sprite"]
y_sort_enabled = true
position = Vector2(-10, 3)
rotation = -0.436332

[node name="RightHandSprite" type="Sprite2D" parent="Sprite"]
y_sort_enabled = true
position = Vector2(10, 3)
rotation = 0.436332

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_uu6xs")

[node name="NavigationAgent" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 8.0
